manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong-container
          image: kgunarno/pingpong:1.0
          ports:
            - containerPort: 3000
