manifest/service.yml
kind: Service
apiVersion: v1
metadata:
  name: pingpong-service
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: pingpong-service
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007
