manifest/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pingpong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pingpong.oke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingpong-service
                port:
                  number: 80
          - path: /(.+)
            pathType: Prefix
            backend:
              service:
                name: pingpong-service
                port:
                  number: 80
